--- a/index.html
+++ b/index.html
@@ -13,5 +13,26 @@
 
     <body>
 
+        <header>
+            <div class="left">
+                <ul>
+                    <li><a href="">Popular Recipes</a></li>
+                    <li><a href="">What's New</a></li>
+                </ul>
+            </div>
+
+            <div class="right">
+                <ul>
+                    <li><a href="">Categories</a></li>
+                    <li><a href="">Meal Ideas</a></li>
+                </ul>
+            </div>
+
+            <div id="logo">
+                <img src="images/chefs-hat.png">
+                <p>MyRecipes</p>
+            </div>
+        </header>
+
     </body>
 </html>
